# pypp

./: .gitignore  .travis.yml  CMakeLists.txt  README.rst
.github/workflows/: build.yml
cmake/: PyPPConfig.cmake.in  PyppConfig.cmake.in  find-sphinx.cmake  pypp-config.cmake.in
doc/: CMakeLists.txt
doc/doxygen/: Doxyfile  Doxyfile.in
doc/sphinx/: conf.py  conf.py.in  index.rst
include/pypp/: func.hpp  generator.hpp  itertools.hpp  os.hpp  path.hpp  string.hpp  tempfile.hpp
include/pypp/posix/: path.hpp
include/pypp/win/: path.hpp
src/: CMakeLists.txt  func.cpp  func.hpp  module.cpp  module.hpp  os.cpp  path.cpp  path.hpp  pypp.hpp.in  string.cpp  string.hpp  tempfile.cpp  version.hpp
src/posix/: os.cpp  path.cpp  tempfile.cpp
src/win/: path.cpp
test/: CMakeLists.txt  test_func.cpp  test_module.cpp  test_path.cpp  test_string.cpp
test/cmake/: CMakeLists.txt  libtest.cpp  test_cmake.py
test/integration/: CMakeLists.txt  test.sh  test_pypp.cpp
test/src/: test_os.cpp  test_path.cpp  test_string.cpp  test_tempfile.cpp
test/unit/: CMakeLists.txt  test_func.cpp  test_itertools.cpp  test_os.cpp  test_path.cpp  test_string.cpp  test_tempfile.cpp
